[gd_scene load_steps=6 format=2]

[ext_resource path="res://Themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=2]
[ext_resource path="res://Fonts/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/ChangeLevelButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/QuitButton.tscn" type="PackedScene" id=5]

[node name="GameInterface" type="CanvasLayer"]

[node name="GUI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="InGame" type="VBoxContainer" parent="GUI"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -62.0
margin_right = 118.0
margin_bottom = 62.0

[node name="CoinsContainer" type="HBoxContainer" parent="GUI/InGame"]
editor/display_folded = true
margin_right = 236.0
margin_bottom = 12.0
alignment = 2

[node name="Coins" type="Label" parent="GUI/InGame/CoinsContainer"]
margin_left = 178.0
margin_right = 206.0
margin_bottom = 12.0
text = "Coins:"

[node name="Score" type="Label" parent="GUI/InGame/CoinsContainer"]
margin_left = 214.0
margin_right = 236.0
margin_bottom = 12.0
text = "0/15"

[node name="Paused" type="ColorRect" parent="GUI"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.176471 )

[node name="Title" type="Label" parent="GUI/Paused"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 3 )
text = "Game Paused"
align = 1

[node name="PauseMenu" type="VBoxContainer" parent="GUI/Paused"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -16.0
margin_right = 32.0
margin_bottom = 51.0
alignment = 1

[node name="Continue" type="Button" parent="GUI/Paused/PauseMenu"]
margin_right = 63.0
margin_bottom = 17.9116
size_flags_horizontal = 3
text = "continue"

[node name="MainMenu" parent="GUI/Paused/PauseMenu" instance=ExtResource( 4 )]
margin_top = 25.0
margin_right = 63.0
margin_bottom = 42.9116
text = "main menu"
next_level = "res://Levels/Main.tscn"

[node name="QuitButton" parent="GUI/Paused/PauseMenu" instance=ExtResource( 5 )]
margin_top = 50.0
margin_right = 63.0
margin_bottom = 67.9116
[connection signal="button_up" from="GUI/Paused/PauseMenu/Continue" to="GUI" method="_on_Continue_button_up"]
